@@ -2,6 +2,12 @@
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Header$
 
+  04 Apr 2004; Nicholas Jones <carpaski@gentoo.org> libsandbox.c, sandbox.c:
+	J. Stubbs tracked down a new bug where mkdir was failing to the patch on
+	the lstat in mkdir... it now only returns 0 or -1 as documented for mkdir.
+	Also remove the errno = ESUCCESS settings as documentation points out that
+	a library isn't allowed to do that. 
+
   04 Apr 2004; Nicholas Jones <carpaski@gentoo.org> libsandbox.c: Added a
   file_security_check() function to check random potential exploits on files
   that sandbox is to load and read -- Normally sandboxpids.tmp. This fixes
